--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,6 +1,9 @@
 {
     "packageDirectories": [
         {
+            "path": "common"
+        },
+        {
             "path": "force-app",
             "default": true,
             "package": "SmartCompanyDatav2",
@@ -8,6 +11,7 @@
             "versionNumber": "0.1.0.NEXT"
         }
     ],
+    "pushPackageDirectoriesSequentially": true,
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "53.0",
