--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,21 +1,18 @@
 {
     "packageDirectories": [
         {
-            "path": "common"
-        },
-        {
             "path": "force-app",
             "default": true,
-            "package": "SmartCompanyDatav2",
+            "package": "SmartCompanyDataV3",
             "versionName": "ver 0.1",
             "versionNumber": "0.1.0.NEXT"
         }
     ],
-    "pushPackageDirectoriesSequentially": true,
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "53.0",
     "packageAliases": {
-        "SmartCompanyDatav2": "0Ho7T000000CaRHSA0"
+        "SmartCompanyDataV3": "0Ho7T000000CaRbSAK",
+        "SmartCompanyDataV3@0.1.0-1": "04t7T000000kZgKQAU"
     }
 }
