--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -4,12 +4,16 @@
     "features": [
         "EnableSetPasswordInApi"
     ],
+    "language" : "en_US",
     "settings": {
         "lightningExperienceSettings": {
             "enableS1DesktopEnabled": true
         },
         "mobileSettings": {
             "enableS1EncryptedStoragePref2": false
+        },
+        "languageSettings": {
+            "enableTranslationWorkbench": true
         }
     }
 }
