Updated project-scratch-def.json for languages

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -13,7 +13,20 @@
             "enableS1EncryptedStoragePref2": false
         },
         "languageSettings": {
-            "enableTranslationWorkbench": true
+            "enableTranslationWorkbench": true,
+            "defaultLanguage": "en_US",
+            "languages": {
+                "language": [
+                    {
+                        "active": true,
+                        "name": "en_US"
+                    },
+                    {
+                        "active": true,
+                        "name": "nl_NL"
+                    }
+                ]
+            }
         }
     }
 }
